--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,13 @@ img {
   padding: 5px;
 }
 
+.nav-item:hover,
+.nav-item:focus,
+.menu-item:hover,
+.menu-item:focus {
+  transform: scale(1.2);
+}
+
 .nav-item:not(:last-child) {
   margin-right: 15px;
 }
@@ -82,7 +89,10 @@ label {
 }
 
 input {
-  display: none;
+  position: absolute;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 #popup:checked ~ .menu {
   display: block;
@@ -123,11 +133,6 @@ input {
   cursor: pointer;
 }
 
-.menu-item:hover,
-:focus {
-  transform: scale(1.2);
-}
-
 .menu-button {
   background-color: var(--background-color-block);
   padding: 20px;
@@ -153,7 +158,7 @@ input {
 }
 
 .button:hover,
-:focus {
+.button:focus {
   transform: scale(0.9);
 }
 
