--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 :root {
-  --background-color: rgba(229, 229, 229, 1);
-  --background-color-block: rgba(245, 244, 250, 1);
-  --black-color: rgba(33, 33, 33, 1);
-  --accent-color: rgba(33, 150, 243, 1);
-  --white-color: rgba(255, 255, 255, 1);
+  --background-color: rgb(229, 229, 229);
+  --background-color-block: rgb(245, 244, 250);
+  --black-color: rgb(33, 33, 33);
+  --accent-color: rgb(33, 150, 243);
+  --white-color: rgb(255, 255, 255);
   --main-font: "Roboto", sans-serif;
   --timing: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -18,6 +18,16 @@ html {
   box-sizing: border-box;
 }
 
+a:focus {
+  outline: none;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   background-color: var(--white-color);
   font-family: var(--main-font);
@@ -29,7 +39,6 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-  cursor: pointer;
 }
 
 ul {
@@ -38,26 +47,25 @@ ul {
 
 img {
   display: block;
-  width: 100%;
+  max-width: 100%;
   height: auto;
+  margin: 0 auto;
 }
 
 .container {
   margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  width: 100%;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
-.wrapper {
+nav {
   display: flex;
   justify-content: end;
-  flex-direction: column;
-  margin: 30px;
-  padding: 15px;
+  margin: 10px;
+  padding: 10px;
 }
 
-.nav {
+.nav-list {
   display: flex;
   text-align: center;
   justify-content: end;
@@ -71,6 +79,12 @@ img {
 .nav-item:not(:last-child) {
   margin-right: 15px;
 }
+
+.nav-item:focus-within,
+.nav-item:hover {
+  border-bottom: 1px solid var(--accent-color);
+}
+
 label {
   cursor: pointer;
 }
@@ -90,17 +104,18 @@ input {
 .menu {
   display: none;
   position: absolute;
-  top: 100px;
-  right: 80px;
-  overflow-y: overlay;
+  top: 80px;
+  right: 2%;
   width: 300px;
-  max-height: 700px;
+  height: 460px;
+  overflow-y: auto;
   margin: 10px;
   box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
+
 .menu img {
-  max-width: 60px;
-  height: 100%;
+  width: 50px;
+  max-height: 60px;
 }
 
 .menu-list {
@@ -120,11 +135,23 @@ input {
   cursor: pointer;
 }
 
+.menu-item img:hover,
+.menu-item:focus-within {
+  transform: scale(1.2);
+}
+
 .menu-button {
   background-color: var(--background-color-block);
   padding: 20px;
   text-align: center;
   cursor: pointer;
+}
+
+.button:hover,
+.buttonfirst:focus-within,
+.buttonsecond:focus-within {
+  outline: none;
+  color: var(--accent-color);
 }
 
 .submenu-list {
@@ -148,14 +175,6 @@ input {
   display: none;
 }
 
-#submenu:checked ~ .menu {
-  overflow-y: scroll;
-}
-
-#submenu:checked ~ .menu {
-  overflow-y: scroll;
-}
-
 .buttonsecond {
   display: none;
 }
@@ -164,17 +183,25 @@ input {
   display: block;
 }
 
-.menu-item:hover,
-.menu-item:focus {
-  transform: scale(1.2);
-}
-.button:hover,
-.button:focus {
-  background-color: var(--accent-color);
+@media screen and (min-width: 768px) {
+  .container {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  nav {
+    margin: 30px;
+    padding: 15px;
+  }
+
+  .menu {
+    top: 100px;
+    right: 10%;
+  }
 }
 
-.nav-item:hover,
-.nav-item:focus {
-  background-color: var(--background-color-block);
-  border-radius: 20%;
+@media screen and (min-width: 1200px) {
+  .menu {
+    right: 8%;
+  }
 }
