--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ a:focus {
 *::before,
 *::after {
   box-sizing: inherit;
+  z-index: 999;
 }
 
 body {
@@ -105,7 +106,7 @@ input {
   display: none;
   position: absolute;
   top: 80px;
-  right: 2%;
+  right: 3%;
   width: 300px;
   height: 460px;
   overflow-y: auto;
